--- a/src/components/Certification/Certifications.css
+++ b/src/components/Certification/Certifications.css
@@ -1,6 +1,6 @@
 .certifications-section {
     padding: 4rem 2rem;
-    background-color: #0a0a0a;
+    background-color: #000000;
     color: #ffffff;
     min-height: 100vh;
 }
